--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.0.0",
+    "nuxt-i18n": "^6.4.1",
     "nuxt-material-design-icons": "^1.0.4",
     "tinycolor2": "^1.4.1"
   },
